Added Buses, Manager functionality
