# autogened-swagger.json
@@ -437,6 +437,12 @@
                 },
                 "companyID": {
                   "example": "any"
+                },
+                "plaqueNumber": {
+                  "example": "any"
+                },
+                "maxSeats": {
+                  "example": "any"
                 }
               }
             }
@@ -588,6 +594,12 @@
                   "example": "any"
                 },
                 "price": {
+                  "example": "any"
+                },
+                "plaqueNumber": {
+                  "example": "any"
+                },
+                "maxSeats": {
                   "example": "any"
                 },
                 "companyID": {
@@ -855,6 +867,60 @@
         }
       }
     },
+    "/bought-tickets/company/{companyID}/today": {
+      "get": {
+        "tags": [
+          "Bought Ticket"
+        ],
+        "description": "Endpoint to get all bought tickets of the given companyID",
+        "parameters": [
+          {
+            "name": "companyID",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/bought-tickets/company/{companyID}/today/assigned": {
+      "get": {
+        "tags": [
+          "Bought Ticket"
+        ],
+        "description": "Endpoint to get all bought tickets of the given companyID",
+        "parameters": [
+          {
+            "name": "companyID",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
     "/bought-tickets/today": {
       "get": {
         "tags": [
@@ -1003,6 +1069,45 @@
         }
       }
     },
+    "/bought-tickets/update-date/{id}": {
+      "put": {
+        "tags": [
+          "Bought Ticket"
+        ],
+        "description": "Endpoint to update a Bought Ticket\\'s ticket date by ID",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "newTicketDate": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
     "/bought-tickets/cancel/{id}": {
       "put": {
         "tags": [
@@ -1065,12 +1170,12 @@
         }
       }
     },
-    "/deliveries": {
+    "/buses": {
       "get": {
         "tags": [
-          "Delivery"
+          "Buses"
         ],
-        "description": "Endpoint to get all Deliveries",
+        "description": "Endpoint to get all Buses",
         "responses": {
           "200": {
             "description": "OK"
@@ -1081,12 +1186,96 @@
         }
       }
     },
-    "/deliveries/{id}": {
+    "/buses/add": {
+      "post": {
+        "tags": [
+          "Buses"
+        ],
+        "description": "Endpoint to add a bus",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "plaqueNumber": {
+                  "example": "any"
+                },
+                "maxCapacity": {
+                  "example": "any"
+                },
+                "model": {
+                  "example": "any"
+                },
+                "password": {
+                  "example": "any"
+                },
+                "companyID": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/buses/login": {
+      "post": {
+        "tags": [
+          "Buses"
+        ],
+        "description": "Endpoint to login with a bus account",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "plaqueNumber": {
+                  "example": "any"
+                },
+                "password": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/bus/{id}": {
       "get": {
         "tags": [
-          "Delivery"
+          "Buses"
         ],
-        "description": "Endpoint to get a Delivery by ID",
+        "description": "Endpoint to get a Bus by ID",
         "parameters": [
           {
             "name": "id",
@@ -1106,66 +1295,14 @@
             "description": "Internal Server Error"
           }
         }
-      },
-      "delete": {
-        "tags": [
-          "Delivery"
-        ],
-        "description": "Endpoint to delete a Delivery by its ID",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "404": {
-            "description": "Not Found"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
       }
     },
-    "/deliveries/detailed/{id}": {
+    "/buses/company/{companyID}": {
       "get": {
         "tags": [
-          "Delivery"
+          "Buses"
         ],
-        "description": "Endpoint to get a Detailed Delivery by ID",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "404": {
-            "description": "Not Found"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      }
-    },
-    "/deliveries/company/{companyID}": {
-      "get": {
-        "tags": [
-          "Delivery"
-        ],
-        "description": "Endpoint to get all deliveries of the given companyID",
+        "description": "Endpoint to get all Buses by CompanyID",
         "parameters": [
           {
             "name": "companyID",
@@ -1178,21 +1315,18 @@
           "200": {
             "description": "OK"
           },
-          "404": {
-            "description": "Not Found"
-          },
           "500": {
             "description": "Internal Server Error"
           }
         }
       }
     },
-    "/deliveries/add": {
+    "/buses/assign": {
       "post": {
         "tags": [
-          "Delivery"
+          "Assign Bus"
         ],
-        "description": "Endpoint to create a Delivery",
+        "description": "Endpoint to assign a ticket to a bus",
         "parameters": [
           {
             "name": "body",
@@ -1200,25 +1334,10 @@
             "schema": {
               "type": "object",
               "properties": {
-                "SenderID": {
+                "boughtTicketID": {
                   "example": "any"
                 },
-                "TicketFormatID": {
-                  "example": "any"
-                },
-                "Description": {
-                  "example": "any"
-                },
-                "ReceiverName": {
-                  "example": "any"
-                },
-                "ReceiverPhone": {
-                  "example": "any"
-                },
-                "DeliveryDate": {
-                  "example": "any"
-                },
-                "TimeForDelivery": {
+                "busID": {
                   "example": "any"
                 }
               }
@@ -1228,6 +1347,133 @@
         "responses": {
           "201": {
             "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/buses/getAssigns": {
+      "get": {
+        "tags": [
+          "Assign Bus"
+        ],
+        "description": "Endpoint to get all Assignments",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/buses/driverData/{id}": {
+      "get": {
+        "tags": [
+          "Assign Bus"
+        ],
+        "description": "Endpoint to get Driver Data by BusID",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/buses/getAssigns/{id}": {
+      "get": {
+        "tags": [
+          "Assign Bus"
+        ],
+        "description": "Endpoint to get an Assignment by ID",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/buses/update/{id}": {
+      "put": {
+        "tags": [
+          "Buses"
+        ],
+        "description": "Endpoint to update a Bus by ID",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/buses/delete/{id}": {
+      "delete": {
+        "tags": [
+          "Buses"
+        ],
+        "description": "Endpoint to delete a Bus by ID",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
           },
           "500": {
             "description": "Internal Server Error"
