# routes/boughtTicket.routes.js
@@ -19,10 +19,16 @@ router.get('/bought-tickets/receipts/user', BoughtTicketController.generateRecei
 router.get('/bought-tickets/receipts/:id', BoughtTicketController.generateSingleReceipt);
 
 //Get all bought tickets from company of logged in Worker
-router.get('/bought-tickets/company', checkUserRole(['WORKER']), BoughtTicketController.getAllCompanyTickets);
+router.get('/bought-tickets/company', checkUserRole(['WORKER', 'MANAGER']), BoughtTicketController.getAllCompanyTickets);
 
 // Route to get boughtTickets by companyID
 router.get('/bought-tickets/company/:companyID', BoughtTicketController.getBoughtTicketsByCompanyID);
+
+// Route to get boughtTickets by companyID
+router.get('/bought-tickets/company/:companyID/today', BoughtTicketController.getBoughtTicketsByCompanyIDToday);
+
+// Route to get boughtTickets by companyID
+router.get('/bought-tickets/company/:companyID/today/assigned', BoughtTicketController.getAssignedBoughtTicketsByCompanyIDToday);
 
 // Get Bought Tickets for today's date
 router.get('/bought-tickets/today', BoughtTicketController.getBoughtTicketsForToday);
@@ -41,6 +47,9 @@ router.get('/bought-tickets/lastMonths/:companyID', BoughtTicketController.getLa
 
 // Get Bought Tickets for the selected date by Company ID
 router.get('/bought-tickets/by-date/:companyID/:selectedDate', BoughtTicketController.getBoughtTicketsByDate);
+
+// Route to update ticketDate by ID
+router.put('/bought-tickets/update-date/:id',BoughtTicketController.updateTicketDate);
 
 // Delete a bought ticket by ID
 router.put('/bought-tickets/cancel/:id', BoughtTicketController.cancelBoughtTicketByID);
